Fix an issue where the Change Passphrase button grew too large on non-mnemonic wallets.

--- a/src/renderer/styles/_inputs.scss
+++ b/src/renderer/styles/_inputs.scss
@@ -110,9 +110,12 @@
     justify-content: space-between;
 
     button {
+        @include button();
+    }
+
+    * {
         height: 30px;
         flex-grow: 1;
-        @include button();
 
         &:not(:first-child) {
             margin-top: $size-small-space;
